# clearvolume

./: .classpath  .gitignore  .project  .travis.yml  LICENSE  README.md  appveyor.yml  build.bat  build.gradle  build.sh  builddistrib.sh  client.sh  gradle.properties  index.html  packagedmg.sh  packagewinapp.sh  packagezip.sh  params.json  pom.xml  refresh.sh  settings.gradle.multiproject
.github/: build.sh
.github/workflows/: build.yml
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
artwork/: Logo.psd
cpp/: AutoPilot.h  cvlib.cpp  cvlib.h  cvlib_test.cpp  dllmain.cpp
cpp/jvmlib/: jawt.lib  jvm.lib
cpp/labview/: cvlib.aliases  cvlib.lvproj  test.lvlps  test.lvproj  test.vi
cpp/labview/lvcvlib/: Report.html  cvlib.lvlib  dir.mnu
cpp/labview/lvcvlib/VIs/: begincvlib.vi  clear Error.vi  create Renderer.vi  create Server.vi  destroy Renderer.vi  destroy Server.vi  dir.mnu  endcvlib.vi  get Last Error.vi  get Last Java Exception Message.vi  send16bit UINT Volume Data To Sink.vi  send8bit UINT Volume Data To Sink.vi  set Volume Index And Time.vi  set Voxel Dimensions In Real Units.vi
deploy/osx/ClearVolume.app/Contents/: Info.plist  PkgInfo
deploy/win/: clearvolume.cfg.xml
gradle/wrapper/: gradle-wrapper.properties
src/clearvolume/: ClearVolumeException.java  DisplayRequest.java  ProjectionAlgorithm.java
src/clearvolume/controller/: Egg3DController.java  ExternalController.java  ExternalRotationController.java  QuaternionRotationController.java  RotationControllerInterface.java
src/clearvolume/demo/: BoxTest.java  ClearVolumeDemo.java
src/clearvolume/interfaces/: ClearVolumeC.java
src/clearvolume/interfaces/tests/: ClearVolumeCTests.java
src/clearvolume/jcuda/: JCudaClearVolumeRenderer.java  JCudaUtils.java  MouseControl.java
src/clearvolume/jcuda/kernels/: VolumeRender.cu  helper_math.h
src/clearvolume/jcuda/ptx/: VolumeRender.ptx
src/clearvolume/jogl/: JOGL2NewtDemo.java  JoglPBOVolumeRenderer.java  KeyboardControl.java  MouseControl.java
src/clearvolume/main/: ClearVolumeMain.java  CommandLine.java  ConnectionPanel.java
src/clearvolume/main/demo/: ClearVolumeMainDemo.java
src/clearvolume/network/: ClearVolumeSerialization.java
src/clearvolume/network/client/: ClearVolumeTCPClient.java  ClearVolumeTCPClientHelper.java  ClearVolumeTCPClientRunnable.java
src/clearvolume/network/demo/: ClearVolumeNetworkDemo.java
src/clearvolume/network/keyvalue/: KeyValueMaps.java
src/clearvolume/network/ringbuffer/: RingBuffer.java
src/clearvolume/network/serialization/: ClearVolumeSerialization.java
src/clearvolume/network/server/: ClearVolumeTCPServer.java  ClearVolumeTCPServerRunnable.java  ClearVolumeTCPServerSink.java  ClearVolumeTCPServerSinkRunnable.java
src/clearvolume/network/test/: ClearVolumeNetworkTests.java  ClearVolumeSerializationTests.java
src/clearvolume/projections/: ProjectionAlgorithm.java
src/clearvolume/renderer/: ClearVolumeRenderer.java  ClearVolumeRendererBase.java  ClearVolumeRendererInterface.java  ControlPanel.java  DisplayRequest.java  DisplayRequestInterface.java
src/clearvolume/renderer/clearcuda/: JCudaClearVolumeRenderer.java  TestJCudaClearVolumeRenderer.java
src/clearvolume/renderer/clearopencl/: OpenCLDevice.java  OpenCLVolumeRenderer.java  OpenCLVolumeRendererOld.java  TestOpenCLVolumeRenderer.java  TestOpencl.java
src/clearvolume/renderer/factory/: ClearVolumeRendererFactory.java
src/clearvolume/renderer/jcuda/: JCudaClearVolumeRenderer.java  JCudaClearVolumeRendererNew.java  JCudaUtils.java
src/clearvolume/test/: ClearVolumeTests.java
src/clearvolume/transferf/: TransferFunction.java  TransferFunction1D.java  TransferFunctions.java
src/clearvolume/transfertf/: ProjectionAlgorithm.java  TransfertFunction.java  TransfertFunction1D.java  TransfertFunctions.java
src/clearvolume/utils/: AppleMac.java  ClearVolumeJFrame.java  SwingUtilities.java
src/clearvolume/volume/: Volume.java  VolumeManager.java
src/cpp/: CMakeLists.txt  README.md  build.sh  cvlib.c  cvlib.cpp  cvlib.h  cvlib_test.cpp
src/cpp/examples/: readtiff.cpp  simple.cpp  tiffreader.cpp  tiffreader.h
src/cpp/include/: cvlib.h  dirent_windows.h
src/cpp/src/: cvlib.c  dllmain.cpp
src/java/clearvolume/: ClearVolumeCloseable.java
src/java/clearvolume/audio/: SoundIn.java  (+1 more)
src/labview/: CurrentVIPath.vi  test.lvlps  test.lvproj  test.vi
src/labview/clearvolume/: Report.html  clearvolume.lvlib  dir.mnu
src/labview/lvcvlib/: dir.mnu
src/testGLJPanel/: OneTriangle.java  OneTriangleSwingGLJPanel.java
stylesheets/: styles.css
(+398 files in other folders)
